--- a/src/main/resources/templates/account/tasker/step2.html
+++ b/src/main/resources/templates/account/tasker/step2.html
@@ -128,8 +128,9 @@
                         <div class="card-body">
                             <label class="font-weight-bold">Điều luật TaskUnite</label>
                             <p><img th:src="@{~/images/fbi.png}" width="100" alt="fbi" /></p>
-                            <p>FBI WARNING</p>
-                            <p>DMCA 2019</p>
+                            <p>Quyền miễn trừ trách nhiệm</p>
+                            <p>- TaskUnite đã, đang và sẽ không có trách nhiệm đối với các bên, nếu: Bên Master lạm dụng nền tảng, hoặc sử dụng TaskUnite dưới các hình thức vi phạm pháp luật. Hoặc bên Tasker có thể tạo điều kiện để vi phạm, hoặc cấu kết với Master</p>
+                            <p>Đối với các trường hợp khác, TaskUnite sẽ, hoặc có rất ít trách nhiệm</p>
                             <a th:href="@{/intro/tasker}" class="btn btn-success" id="completeTasker">
                                 Hoàn thành!
                             </a>
